# CppWorkspace

./: .gitignore  Box.cpp  DIY_cube_V1.1.ino.cpp  HanoiTower.cpp  MaxDifference.cpp  Test2.h  cubic.cpp  distance.cpp  fun.cpp  hello.cpp  main xincan.cpp  贪吃蛇.cpp  飞机.cpp
CPP_course/: B.cpp  C.cpp  C.h  CMakeLists.txt  Question3.cpp
CPP_course/Assignment/: Assignment1.cpp  Assignment2.cpp  test_csv.cpp  world_cities.csv
CPP_course/Lab/Lab11/: CandyBar.cpp  CandyBar.h  Rectangle.cpp  Rectangle.h  useCandyBar.cpp  useRectangle.cpp
CPP_course/Lab/Lab12/: Complex.cpp  Complex.h  Number.cpp  Number.h  usingComplex.cpp  usingNum.cpp
CPP_course/Lab/Lab13/: CCube.cpp  CCube.h  CSphere.cpp  CSphere.h  CStereoShape.cpp  CStereoShape.h  testShape.cpp
CPP_course/Lab/Lab14/: Matrix.cpp  Matrix.h  exer2.cpp  matrix_.h  maxTemplate.cpp  useMatrixTemplate.cpp
CPP_course/Lab/Lab15/: test.cpp  testException.cpp
CPP_course/Lab/Lab2/: Exercise1.cpp  Exercise2.cpp  Exercise3.cpp
CPP_course/Lab/Lab3/: Lab3Ex1.cpp  Lab3ex2.cpp  Lab3ex3.cpp
CPP_course/Lab/Lab4/: Lab4ex1.cpp  Lab4ex2.cpp  Lab4ex3.cpp
CPP_course/Lab/Lab5/: Lab5ex1.cpp  Lab5ex2.cpp  Lab5ex3.cpp  Lab5ex4.cpp
CPP_course/Lab/Lab6/: Lab6ex1.cpp  Lab6ex3.cpp  Labex2.cpp
CPP_course/Lab/Lab7/: Lab7ex1.cpp  Lab7ex2.cpp  Lab7ex3.cpp
CPP_course/Lab/Lab8/: Lab8ex1.cpp  Lab8ex2.cpp
CPP_course/Lab/Lab9/Ex1/: Makefile  fun.cpp  fun.h  main.cpp
CPP_course/Lab/Lab9/Ex2/: CandyBar.cpp  CandyBar.h  Makefile  main.cpp
CPP_course/Midterm/: Question1.cpp  Question2.cpp  Question3.cpp  Question4.cpp
CPP_course/Midterm/Mid_Exam_code/Q1/: MID_EXAM_Q1_v0.cpp  MID_EXAM_Q1_v1.cpp  MID_EXAM_Q1_v2.cpp
CPP_course/Midterm/Mid_Exam_code/Q2/: MID_EXAM_Q2.cpp
CPP_course/Midterm/Mid_Exam_code/Q3/: MID_EXAM_Q3.cpp  maxtrix.cpp  maxtrix.h
CPP_course/Midterm/Mid_Exam_code/Q4/: MID_EXAM_Q4.cpp  encode_decode.cpp  encode_decode.h
CppAssignment/: Assignment3.rar  Assignment4.rar  FirstAssignmet.cc
CppAssignment/Assignment1_previous/: Assignmet1.cpp
CppAssignment/Assignment3/: Assign3_q1.cpp  Assing3_q2.cpp  q1_test1.txt  q1_test2.txt
CppAssignment/Assignment3/Assign_q3/: Assign_q3.cpp  CMakeLists.txt  MaKeFile.win  makefile  using_utf8_to_codepoint.c
CppAssignment/Assignment3/assign3_yjh/: CMakeLists.txt  assign4_1.cpp  assign4_2.cpp  lab3.c  main.cpp  test.txt  using_utf8_to_codepoint.c  utf8.h
CppAssignment/Assignment4/: Assignment4.h  CMakeLists.txt  lab_records.csv  question1-3.cpp  question4.cpp  question5.cpp
CppAssignment/Assignment5/: CMakeLists.txt  UTF8string.cpp  UTF8string.hpp  utf8.c
CppAssignment/Assignment5/lab5/__MACOSX/lab5/: ._UTF8string.cpp  ._UTF8string.hpp  ._testUTF8string_lab5.cpp  ._testUTF8string_lab5.dSYM  ._utf8.c  ._utf8.h
CppAssignment/Assignment5/lab5/lab5/: .UTF8string.hpp.swo  UTF8string.cpp  UTF8string.hpp  testUTF8string_lab5
CppAssignment/Assignment_1/: Assignment1.cpp
CppAssignment/Assignment_2/: Assignment2.cpp  test_csv.cpp  test_read_csv.cpp  test_tolower.cpp
CppAssignment/opencv_test/: CMakeCache.txt  CMakeLists.txt  CMakelists.2txt  Makefile  cmake_install.cmake  hc_5eb8197a00000001  hc_5eb8197a00000002  main.cpp  opencv_test.cbp  trajectory_test.cpp
CppAssignment/opencv_test/Lab_10/: CMakeLists.txt  CMakeLists_cygwin.txt  CMakeLists_mingw.txt  Cam.cpp  detect_circles.cpp  detect_face.cpp  file_writer.cpp  line_detection.cpp  main.cpp
CppAssignment/opencv_test/sample_code/: FlppyBird.py  move_detect_basic.cpp  move_detect_filter.cpp  traject_cap.cpp  traject_face.cpp  traject_face.py  traject_pen.cpp
DataStructureAlgorithm/UsefulStructure/: Linkedlist.cpp  Stack.cpp
DataStructureAlgorithm/Week8/: Lab7_2.cpp  lab  lab7  lab7.cpp  lab7_2  makefile  test  test.cpp
DataStructureAlgorithm/Week9/: tree.cpp
Lab/: CMakeLists.txt  Lab.vcxproj  Lab.vcxproj.filters  Lab2_1.cpp  Lab2_2.cpp
Lab/Debug/: vc141.idb
Lab/Debug/Lab.tlog/: Lab.lastbuildstate
Lab/x64/Debug/: vc141.idb
Lab/x64/Debug/Lab.tlog/: Lab.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Learning-code/: --library=c++  MATRICS_C.c  MATRIX_CPP.cpp  struct_test.cpp  test  test.cpp  test_2d_array.cpp  test_headfile.c
Learning-code/CompondClass/: StructNum_test.cpp  enumeration.cpp
Learning-code/File_IO/: input_text.txt  out_file.cpp  sumfile.cpp
Learning-code/Function_template/: funtemp.cpp  swap_specialization.cpp
Learning-code/Functions/: arfupt.cpp  inline.cpp  pointers_to_function.cpp
Learning-code/Loop/: Num_reading_input.cpp  test_redirect.txt  textin1.cpp  textin2.cpp  textin_3.cpp  waiting.cpp
Learning-code/Pointers_Address/: addpntrs.cpp  address.cpp  pointertoDynamic.cpp  ptrstr.cpp
Learning-code/StringChar_array/: String_input.cpp  cin_input_test.cpp  intager_input_test.cpp  mixtype.cpp  string_input_test.cpp  string_operation.cpp
Learning-code/Struct/: struct_test.cpp
Learning-code/Vector_class/: makefile  randWalk.cpp  vect.cpp  vect.h
Learning-code/class_objects/: makefile  stock00.cpp  stock00.h  usestck0.cpp
Project1/: Project1.sln
Project1/Debug/: Project1.ilk
Project1/Project1/: Project1.vcxproj  源.cpp  源1.cpp
Project1/Project1/Debug/: vc141.idb
Project1/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project1/Project1/Release/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  Project1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project1/Release/: Project1.iobj  Project1.ipdb
Studyfield/: cppFirst.cpp  test.cc  twodimensionarray.c
others/: Box.cpp  Chess.cpp  Comparision to test 2.cpp  HanoiTower.cpp  MaxDifference.cpp  Test.cpp  Test2.cpp  Test2.h  Test3.cpp  cubic.cpp  distance.cpp  fun.cpp  hello.c  main xincan.cpp  teststr_map.cpp  贪吃蛇.cpp  飞机.cpp
others/FlppyBird/: flppy_bird.cpp
sample_code/: move_detect_basic.cpp  move_detect_filter.cpp  traject_cap.cpp  traject_cap.py  traject_face.py  traject_hand.cpp  traject_pen.cpp
(+2 files in other folders)
