cmake_minimum_required(VERSION 3.12)
project(newPorject)

set(CMAKE_CXX_STANDARD 14)


add_executable(Lab Lab/Lab2/Exercise1.cpp)
add_executable(Lab2Ex2 Lab/Lab2/Exercise2.cpp )
add_executable(Lab2Ex3 Lab/Lab2/Exercise3.cpp)
add_executable(test_csv Assignment/test_csv.cpp)
add_executable(Assignment2 Assignment/Assignment2.cpp)
add_executable(Lab7ex2 Lab/Lab7/Lab7ex2.cpp)